fixed overflow when opening mobile menu

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -4,10 +4,6 @@
   font-size: 16px;
 }
 
-body {
-  overflow: hidden;
-}
-
 * {
   padding: 0;
   margin: 0;
